appId: com.cajero.app
---
# Email
- tapOn:
    id: "email-input"
- eraseText: 50
- inputText: "${EMAIL}"

# Password
- tapOn:
    id: "password-input"
- eraseText: 50
- inputText: "${PASSWORD}"

# Submit via keyboard Done/Enter action
- pressKey: enter
